# datafuckerr

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  live-iso.yml  release.yml
demos/: README.md
docs/: AUDIT_SCHEMA.md  CLIENT_REPORT.md  FAQ.md  HARDWARE_QUALIFICATION.md  INCIDENT_RESPONSE.md  OPERATOR_MANUAL.md  RELEASE_CHECKLIST.md  RELEASING.md  THREAT_MODEL.md
fuzz/: fuzz_audit_record.c  fuzz_nvme_identify.c
fuzz/corpus/nvme/: minimal
include/: dfx.h  dfx_sha256.h
packaging/live/: README.md  build.sh
packaging/live/config/hooks/normal/: 010-datafuckerr.hook.chroot
packaging/live/config/includes.chroot/etc/systemd/system/: datafuckerr-gui.service
packaging/live/config/package-lists/: datafuckerr.list.chroot
packaging/native/: THIRD_PARTY_NOTICES.md  datafuckerr.desktop  datafuckerr.iss  datafuckerr.spec  render_icons.py  requirements.txt
src/: audit.c  audit_internal.h  device.c  erase.c  erase_internal.h  main.c  platform.c  purge.c  purge_internal.h  qualification.c  runtime.c  sha256.c
tests/: test_audit.c  test_cli.ps1  test_cli.sh  test_erase.c  test_purge.c  test_qualification.c  test_safety.c  test_sha256.c
tools/demos/: generate.sh
tools/release/: build_native.py  package_release.py  test_build_native.py  verify_native.py  verify_release.py
tools/report/: generate_report.py  requirements.txt
tools/report/tests/: test_generate_report.py
tools/ui/: capture_interface.py
ui/: README.md  datafuckerr_qt.py  diskpurge_commands.py  run_gui.cmd  run_gui.command  run_gui.sh  test_datafuckerr_qt.py  test_diskpurge_commands.py
